--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.3.4",
     "@prisma/client": "6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "next": "16.0.0",
@@ -24,6 +26,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "three": "^0.181.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
